objects/ssot__IndicatorResult__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CalculationMethod__c</fullName>
        <label>Indicator Result Calculation Method Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Denominator__c</fullName>
        <label>Denominator</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FlowDefinitionApiName__c</fullName>
        <label>Flow Definition API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowVersion__c</fullName>
        <label>Flow Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Indicator Result Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndicatorPerformancePeriodId__c</fullName>
        <label>Indicator Performance Period</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndicatorResultType__c</fullName>
        <label>Indicator Result Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MeasurementDate__c</fullName>
        <label>Measurement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Numerator__c</fullName>
        <label>Numerator</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResultValueNumber__c</fullName>
        <label>Result Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726635772_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IndicatorResult_IndicatorPerformance_rel</label>
        <referenceTo>ssot__IndicatorPerformancePeriod__dlm</referenceTo>
        <relationshipLabel>IndicatorResult_IndicatorPerformance_rel</relationshipLabel>
        <relationshipName>rel_1716726635772_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>